--- a/project.html
+++ b/project.html
@@ -129,6 +129,36 @@
           >
         </div>
       </section>
+      <section class="section-white">
+        <div class="section-body centered-container">
+          <h3>Cash Register</h3>
+          <small>javaScript</small>
+          <h4>
+            Cashing Digitized
+          </h4>
+          <a class="primary-link" href="https://countcash.netlify.app/">Live Project</a>
+          <a
+            class="secondary-link"
+            href="https://github.com/kunalsamanta/cashRegister"
+            >Source Code</a
+          >
+        </div>
+      </section>
+      <section class="section-white">
+        <div class="section-body centered-container">
+          <h3>Born Lucky</h3>
+          <small>javaScript</small>
+          <h4>
+            Are you born lucky?
+          </h4>
+          <a class="primary-link" href="https://knowyourluck.netlify.app/">Live Project</a>
+          <a
+            class="secondary-link"
+            href="https://github.com/kunalsamanta/birthdayLucky"
+            >Source Code</a
+          >
+        </div>
+      </section>
   
       
           >
