--- a/project.html
+++ b/project.html
@@ -175,6 +175,22 @@
           >
         </div>
       </section>
+
+      <section class="section-white">
+        <div class="section-body centered-container">
+          <h3>Calculate profit loss</h3>
+          <small>javaScript</small>
+          <h4>
+            calculateprofit and loss in doge coin
+          </h4>
+          <a class="primary-link" href="https://dogecalculate.netlify.app/">Live Project</a>
+          <a
+            class="secondary-link"
+            href="https://github.com/kunalsamanta/profit-loss"
+            >Source Code</a
+          >
+        </div>
+      </section>
   
       
           
