--- a/project.html
+++ b/project.html
@@ -178,6 +178,22 @@
 
       <section class="section-white">
         <div class="section-body centered-container">
+          <h3>Birthday pallidrom</h3>
+          <small>javaScript</small>
+          <h4>
+            Is your birthday pallidrom or not
+          </h4>
+          <a class="primary-link" href="https://pallidrom.netlify.app/">Live Project</a>
+          <a
+            class="secondary-link"
+            href="https://github.com/kunalsamanta/profit-loss"
+            >Source Code</a
+          >
+        </div>
+      </section>
+
+      <section class="section-white">
+        <div class="section-body centered-container">
           <h3>Calculate profit loss</h3>
           <small>javaScript</small>
           <h4>
@@ -191,6 +207,8 @@
           >
         </div>
       </section>
+
+
   
       
           
