--- a/blog.html
+++ b/blog.html
@@ -19,7 +19,7 @@
         <section class="section-white">
           <div class="section-body centered-container">
           <h3>challenges on day 1</h3>
-          <p>At the day one when i started codding i face lots of difficulty altho i'm from Computer science background. I started codding after.......</p>
+          <p>On the very fist day when I first started coding, I faced lots of difficulties al though I'm from a Computer science.......</p>
           <a class="primary-link"
             href="https://dev.to/kunalsamanta/challenges-on-day-1-o0a">Read more</a>
           </div>
