new section and img

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
          <p class="head1">I'm a web developer</p>
     </div>
     <div class="imgsec" id="home">
-        <img src="kunal.jpeg"alt="mypic" >
+        <img src="kunal.jpg"alt="mypic" >
         <a href="kunalcv.pdf" class="right" target="_blank">Download Resume</a>
 
     </div>
@@ -40,6 +40,30 @@
   
 
    </div>
+
+
+   <section class="section-dark">
+    <h3 class="section-heading">projects</h3>
+    <div class="section-body centered-container">
+      <p>
+        Here are a few of my projects hosted online along with the souce code,
+        do have a look
+      </p>
+      <a class="link" href="/project.html">see projects</a>
+    </div>
+  </section>
+
+
+   <section class="section-blog">
+    <h3 class="section-heading">blogs</h3>
+    <div class="section-body centered-container">
+      <p>
+        Here are a few of my projects hosted online along with the souce code,
+        do have a look
+      </p>
+      <a class="link" href="/blog.html">read blogs</a>
+    </div>
+  </section>
    
    
    <div class="contact" id="contact">
