--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <h3 class="section-heading">blogs</h3>
     <div class="section-body centered-container">
       <p>
-        Here are a few of my projects hosted online along with the souce code,
+        Here are a few of my blog hosted online ,
         do have a look
       </p>
       <a class="link" href="/blog.html">read blogs</a>
