--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>KunalPortfolio</title>
+    <link rel = "icon" href = "head2.jpg" 
+        type = "image/x-icon">
 </head>
 <body>
     <div class="topnav">
