--- a/index.html
+++ b/index.html
@@ -33,8 +33,7 @@
    <div class="about" id="about">
     <h2 class="about-head">About me</h2>
 
-    <p class="about-p">Hi i'm kunal samanta.i'm a professional developer. Right now i'm working on b2b marketing . 
-        I passed my scooling from Natibpur Bhudev Vidiyalaya and collage from Narula institue of Technology with great distintion. </p>
+    <p class="about-p">Hi i'm kunal samanta.I'm a professional developer. Right now I'm working on b2b marketing. I passed my schooling at Natibpur Bhudev Vidiyalaya and college from Narula Institute of Technology with great distinction. I like to play cricket and football. I can be a great cook. I can cook everything but my specialty is "chicken Kosa" and "briyani". I love to watch cartoons also, my favorite cartoon is Tom and jerry.   </p>
     <h3 class="about-tech">Technology i know</h3>
     <p class="about-tech-p">HTML,CSS,JavaScript,react.js,mongo db</p>
 
