--- a/project.html
+++ b/project.html
@@ -24,7 +24,7 @@
           <h4>This CLI Quiz App to check how much my FRIENDS KNOW ME!</h4>
           <a
             class="primary-link"
-            href="https://replit.com/@kunalsamanta123/cli-app?v=1"
+            href="https://replit.com/@kunalsamanta123/doyouKnow?v=1&embed=1&output=1"
             >Live Project</a
           >
           <a class="secondary-link" href="https://github.com/kunalsamanta/cli-app"
