--- a/project.html
+++ b/project.html
@@ -42,7 +42,7 @@
           </h4>
           <a
             class="primary-link"
-            href="https://replit.com/@kunalsamanta123/cliAppMarvel#index.js"
+            href="https://replit.com/@kunalsamanta123/cliAppMarvel?v=1&embed=1&output=1"
             >Live Project</a
           >
           <a
@@ -199,7 +199,7 @@
           <h4>
             calculateprofit and loss in doge coin
           </h4>
-          
+           
           <a class="primary-link" href="https://dogecalculate.netlify.app/">Live Project</a>
           <a
             class="secondary-link"
