add another project

--- a/project.html
+++ b/project.html
@@ -208,6 +208,17 @@
           >
         </div>
       </section>
+      <section class="section-white">
+        <div class="section-body centered-container">
+          <h3>Tribute page</h3>
+          <small>HTML, CSS</small>
+          <h4> Tribute page of Swami vivekananda with imgages</h4>
+          <a class="primary-link"  target="_blank" href="https://swamivivekananda.netlify.app/">Live project</a>
+          <a class="secondary-link"
+          href="https://github.com/kunalsamanta/tribute">
+            Source code</a>
+        </div>
+      </section>
 
 
   
